--- a/.env.example
+++ b/.env.example
@@ -70,6 +70,9 @@ LOG_WITH_COLORS=False
 # You can download the database here: https://dev.maxmind.com/geoip/geolite2-free-geolocation-data
 #MMD_DB_PATH=/home/user/misc/GeoLite2-City.mmdb
 
+# extra options
+IGNORE_FAILED=False
+
 # advanced dev settings
 
 ## WARNING: only touch this once you've
