--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,9 @@ APP_PORT=10000
 DOMAIN=example.com
 
 # XXX: make sure these match your db credentials
-DB_USER=cmyui
+DB_USER=cadmin
 DB_PASS=lol123
-DB_NAME=banchopy
+DB_NAME=bpy
 DB_HOST=mysql
 DB_PORT=3306
 
@@ -51,7 +51,7 @@ REDIRECT_OSU_URLS=True
 
 PP_CACHED_ACCS=90,95,98,99,100
 
-DISALLOWED_NAMES=mrekk,vaxei,btmc,cookiezi
+DISALLOWED_NAMES=admin
 DISALLOWED_PASSWORDS=password,abc123
 DISALLOW_OLD_CLIENTS=True
 DISALLOW_INGAME_REGISTRATION=True
@@ -59,8 +59,7 @@ DISALLOW_INGAME_REGISTRATION=True
 DISCORD_AUDIT_LOG_WEBHOOK=
 
 # automatically share information with the primary
-# developer of bancho.py (https://github.com/cmyui)
-# for debugging & development purposes.
+# developers of bancho.py for debugging & development purposes.
 AUTOMATICALLY_REPORT_PROBLEMS=False
 
 LOG_WITH_COLORS=False
