--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,8 @@ profile = "black"
 [tool.poetry]
 name = "bancho-py"
 version = "5.2.2"
-description = "An osu! server implementation optimized for maintainability in modern python"
-authors = ["Akatsuki Team"]
+description = "An osu! server implementation optimized for maintainability in modern python - forked for the salad!"
+authors = ["Akatsuki Team", "Salad Server"]
 license = "MIT"
 readme = "README.md"
 packages = [{ include = "bancho" }]
